ide/MoonshineSharedCore/src/elements/tbls/language/TibboBasic/lib/TibboBasicParser.js
// Generated from /Users/jimmyhu/Projects/tibbo-basic/server/language/TibboBasic/TibboBasicParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TibboBasicParserListener = require('./TibboBasicParserListener').TibboBasicParserListener;
var TibboBasicParserVisitor = require('./TibboBasicParserVisitor').TibboBasicParserVisitor;

var grammarFileName = "TibboBasicParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     "'-'", "'*'", null, "'+'", null, "'['", "']'", "'{'", 
                     "'}'", null, null, "'''", "':'", "';'", "','", "'.'", 
                     null, "'_'" ];

var symbolicNames = [ null, "OBJECT", "AND", "AS", "BOOLEAN", "REAL", "BYREF", 
                      "BYTE", "BYVAL", "CASE", "CASE_ELSE", "CHAR", "CONST", 
                      "COUNTOF", "DECLARE", "DIM", "DO", "DWORD", "ELSE", 
                      "ELIF", "END", "ELSEIF", "ENUM", "END_ENUM", "END_FUNCTION", 
                      "END_IF", "END_PROPERTY", "END_SELECT", "END_SUB", 
                      "END_TYPE", "END_WITH", "EVENT", "EXIT_DO", "EXIT_FOR", 
                      "EXIT_FUNCTION", "EXIT_PROPERTY", "EXIT_SUB", "EXIT_WHILE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "GET", "GOTO", 
                      "IF", "IFDEF", "IFNDEF", "INCLUDE", "INCLUDEPP", "INTEGER", 
                      "LONG", "LOOP", "MOD", "NEXT", "NOT", "OR", "PROPERTY", 
                      "PUBLIC", "SELECT", "SET", "SHL", "SHORT", "SHR", 
                      "SIZEOF", "STEP", "STRING", "SUB", "THEN", "TO", "TRUE", 
                      "TYPE", "UNDEF", "UNTIL", "WEND", "WHILE", "WORD", 
                      "XOR", "SHARP", "STRINGLITERAL", "TemplateStringLiteral", 
                      "HEXLITERAL", "BINLITERAL", "INTEGERLITERAL", "DIV", 
                      "EQ", "GEQ", "GT", "LEQ", "LPAREN", "LT", "MINUS", 
                      "MULT", "NEQ", "PLUS", "RPAREN", "L_SQUARE_BRACKET", 
                      "R_SQUARE_BRACKET", "L_CURLY_BRACKET", "R_CURLY_BRACKET", 
                      "NEWLINE", "COMMENT", "SINGLEQUOTE", "COLON", "SEMICOLON", 
                      "COMMA", "DOT", "BANG", "UNDERSCORE", "SYSCALL", "WS", 
                      "IDENTIFIER", "DIRECTIVE_INCLUDE", "DIRECTIVE_INCLUDEPP", 
                      "DIRECTIVE_DEFINE", "DIRECTIVE_IF", "DIRECTIVE_ELIF", 
                      "DIRECTIVE_ELSE", "DIRECTIVE_UNDEF", "DIRECTIVE_IFDEF", 
                      "DIRECTIVE_IFNDEF", "DIRECTIVE_ENDIF", "DIRECTIVE_ERROR", 
                      "DIRECTIVE_BANG", "DIRECTIVE_LP", "DIRECTIVE_RP", 
                      "DIRECTIVE_EQUAL", "DIRECTIVE_NOTEQUAL", "DIRECTIVE_AND", 
                      "DIRECTIVE_OR", "DIRECTIVE_LT", "DIRECTIVE_GT", "DIRECTIVE_LE", 
                      "DIRECTIVE_GE", "DIRECTIVE_ID", "DIRECTIVE_DECIMAL_LITERAL", 
                      "DIRECTIVE_FLOAT", "DIRECTIVE_NEWLINE", "DIRECTIVE_SINGLE_COMMENT", 
                      "DIRECTIVE_BACKSLASH_NEWLINE", "DIRECTIVE_TEXT_NEWLINE", 
                      "DIRECTIVE_TEXT_BACKSLASH_NEWLINE", "DIRECTIVE_TEXT_MULTI_COMMENT", 
                      "DIRECTIVE_TEXT_SINGLE_COMMENT", "DIRECTIVE_TEXT", 
                      "ANY" ];

var ruleNames =  [ "startRule", "topLevelDeclaration", "includeStmt", "includeppStmt", 
                   "block", "statement", "constStmt", "constSubStmt", "declareVariableStmt", 
                   "declareSubStmt", "declareFuncStmt", "doLoopStmt", "enumerationStmt", 
                   "enumerationStmt_Constant", "exitStmt", "forNextStmt", 
                   "functionStmt", "jumpStmt", "goToStmt", "ifThenElseStmt", 
                   "ifConditionStmt", "propertyDefineStmt", "propertyDefineStmt_InStmt", 
                   "propertyGetStmt", "propertySetStmt", "eventDeclaration", 
                   "syscallDeclaration", "syscallDeclarationInner", "syscallInternalDeclarationInner", 
                   "syscallInternalParamList", "paramInternal", "selectCaseStmt", 
                   "sC_Case", "sC_Default", "sC_Cond", "subStmt", "typeStmt", 
                   "typeStmtElement", "expression", "unaryExpression", "unaryOperator", 
                   "postfixExpression", "postfix", "primaryExpression", 
                   "variableStmt", "variableListStmt", "variableListItem", 
                   "whileWendStmt", "objectDeclaration", "argList", "arg", 
                   "paramList", "param", "asTypeClause", "baseType", "complexType", 
                   "fieldLength", "lineLabel", "literal", "arrayLiteral", 
                   "type", "visibility" ];

function TibboBasicParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TibboBasicParser.prototype = Object.create(antlr4.Parser.prototype);
TibboBasicParser.prototype.constructor = TibboBasicParser;

Object.defineProperty(TibboBasicParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TibboBasicParser.EOF = antlr4.Token.EOF;
TibboBasicParser.OBJECT = 1;
TibboBasicParser.AND = 2;
TibboBasicParser.AS = 3;
TibboBasicParser.BOOLEAN = 4;
TibboBasicParser.REAL = 5;
TibboBasicParser.BYREF = 6;
TibboBasicParser.BYTE = 7;
TibboBasicParser.BYVAL = 8;
TibboBasicParser.CASE = 9;
TibboBasicParser.CASE_ELSE = 10;
TibboBasicParser.CHAR = 11;
TibboBasicParser.CONST = 12;
TibboBasicParser.COUNTOF = 13;
TibboBasicParser.DECLARE = 14;
TibboBasicParser.DIM = 15;
TibboBasicParser.DO = 16;
TibboBasicParser.DWORD = 17;
TibboBasicParser.ELSE = 18;
TibboBasicParser.ELIF = 19;
TibboBasicParser.END = 20;
TibboBasicParser.ELSEIF = 21;
TibboBasicParser.ENUM = 22;
TibboBasicParser.END_ENUM = 23;
TibboBasicParser.END_FUNCTION = 24;
TibboBasicParser.END_IF = 25;
TibboBasicParser.END_PROPERTY = 26;
TibboBasicParser.END_SELECT = 27;
TibboBasicParser.END_SUB = 28;
TibboBasicParser.END_TYPE = 29;
TibboBasicParser.END_WITH = 30;
TibboBasicParser.EVENT = 31;
TibboBasicParser.EXIT_DO = 32;
TibboBasicParser.EXIT_FOR = 33;
TibboBasicParser.EXIT_FUNCTION = 34;
TibboBasicParser.EXIT_PROPERTY = 35;
TibboBasicParser.EXIT_SUB = 36;
TibboBasicParser.EXIT_WHILE = 37;
TibboBasicParser.FALSE = 38;
TibboBasicParser.FLOAT = 39;
TibboBasicParser.FOR = 40;
TibboBasicParser.FUNCTION = 41;
TibboBasicParser.GET = 42;
TibboBasicParser.GOTO = 43;
TibboBasicParser.IF = 44;
TibboBasicParser.IFDEF = 45;
TibboBasicParser.IFNDEF = 46;
TibboBasicParser.INCLUDE = 47;
TibboBasicParser.INCLUDEPP = 48;
TibboBasicParser.INTEGER = 49;
TibboBasicParser.LONG = 50;
TibboBasicParser.LOOP = 51;
TibboBasicParser.MOD = 52;
TibboBasicParser.NEXT = 53;
TibboBasicParser.NOT = 54;
TibboBasicParser.OR = 55;
TibboBasicParser.PROPERTY = 56;
TibboBasicParser.PUBLIC = 57;
TibboBasicParser.SELECT = 58;
TibboBasicParser.SET = 59;
TibboBasicParser.SHL = 60;
TibboBasicParser.SHORT = 61;
TibboBasicParser.SHR = 62;
TibboBasicParser.SIZEOF = 63;
TibboBasicParser.STEP = 64;
TibboBasicParser.STRING = 65;
TibboBasicParser.SUB = 66;
TibboBasicParser.THEN = 67;
TibboBasicParser.TO = 68;
TibboBasicParser.TRUE = 69;
TibboBasicParser.TYPE = 70;
TibboBasicParser.UNDEF = 71;
TibboBasicParser.UNTIL = 72;
TibboBasicParser.WEND = 73;
TibboBasicParser.WHILE = 74;
TibboBasicParser.WORD = 75;
TibboBasicParser.XOR = 76;
TibboBasicParser.SHARP = 77;
TibboBasicParser.STRINGLITERAL = 78;
TibboBasicParser.TemplateStringLiteral = 79;
TibboBasicParser.HEXLITERAL = 80;
TibboBasicParser.BINLITERAL = 81;
TibboBasicParser.INTEGERLITERAL = 82;
TibboBasicParser.DIV = 83;
TibboBasicParser.EQ = 84;
TibboBasicParser.GEQ = 85;
TibboBasicParser.GT = 86;
TibboBasicParser.LEQ = 87;
TibboBasicParser.LPAREN = 88;
TibboBasicParser.LT = 89;
TibboBasicParser.MINUS = 90;
TibboBasicParser.MULT = 91;
TibboBasicParser.NEQ = 92;
TibboBasicParser.PLUS = 93;
TibboBasicParser.RPAREN = 94;
TibboBasicParser.L_SQUARE_BRACKET = 95;
TibboBasicParser.R_SQUARE_BRACKET = 96;
TibboBasicParser.L_CURLY_BRACKET = 97;
TibboBasicParser.R_CURLY_BRACKET = 98;
TibboBasicParser.NEWLINE = 99;
TibboBasicParser.COMMENT = 100;
TibboBasicParser.SINGLEQUOTE = 101;
TibboBasicParser.COLON = 102;
TibboBasicParser.SEMICOLON = 103;
TibboBasicParser.COMMA = 104;
TibboBasicParser.DOT = 105;
TibboBasicParser.BANG = 106;
TibboBasicParser.UNDERSCORE = 107;
TibboBasicParser.SYSCALL = 108;
TibboBasicParser.WS = 109;
TibboBasicParser.IDENTIFIER = 110;
TibboBasicParser.DIRECTIVE_INCLUDE = 111;
TibboBasicParser.DIRECTIVE_INCLUDEPP = 112;
TibboBasicParser.DIRECTIVE_DEFINE = 113;
TibboBasicParser.DIRECTIVE_IF = 114;
TibboBasicParser.DIRECTIVE_ELIF = 115;
TibboBasicParser.DIRECTIVE_ELSE = 116;
TibboBasicParser.DIRECTIVE_UNDEF = 117;
TibboBasicParser.DIRECTIVE_IFDEF = 118;
TibboBasicParser.DIRECTIVE_IFNDEF = 119;
TibboBasicParser.DIRECTIVE_ENDIF = 120;
TibboBasicParser.DIRECTIVE_ERROR = 121;
TibboBasicParser.DIRECTIVE_BANG = 122;
TibboBasicParser.DIRECTIVE_LP = 123;
TibboBasicParser.DIRECTIVE_RP = 124;
TibboBasicParser.DIRECTIVE_EQUAL = 125;
TibboBasicParser.DIRECTIVE_NOTEQUAL = 126;
TibboBasicParser.DIRECTIVE_AND = 127;
TibboBasicParser.DIRECTIVE_OR = 128;
TibboBasicParser.DIRECTIVE_LT = 129;
TibboBasicParser.DIRECTIVE_GT = 130;
TibboBasicParser.DIRECTIVE_LE = 131;
TibboBasicParser.DIRECTIVE_GE = 132;
TibboBasicParser.DIRECTIVE_ID = 133;
TibboBasicParser.DIRECTIVE_DECIMAL_LITERAL = 134;
TibboBasicParser.DIRECTIVE_FLOAT = 135;
TibboBasicParser.DIRECTIVE_NEWLINE = 136;
TibboBasicParser.DIRECTIVE_SINGLE_COMMENT = 137;
TibboBasicParser.DIRECTIVE_BACKSLASH_NEWLINE = 138;
TibboBasicParser.DIRECTIVE_TEXT_NEWLINE = 139;
TibboBasicParser.DIRECTIVE_TEXT_BACKSLASH_NEWLINE = 140;
TibboBasicParser.DIRECTIVE_TEXT_MULTI_COMMENT = 141;
TibboBasicParser.DIRECTIVE_TEXT_SINGLE_COMMENT = 142;
TibboBasicParser.DIRECTIVE_TEXT = 143;
TibboBasicParser.ANY = 144;

TibboBasicParser.RULE_startRule = 0;
TibboBasicParser.RULE_topLevelDeclaration = 1;
TibboBasicParser.RULE_includeStmt = 2;
TibboBasicParser.RULE_includeppStmt = 3;
TibboBasicParser.RULE_block = 4;
TibboBasicParser.RULE_statement = 5;
TibboBasicParser.RULE_constStmt = 6;
TibboBasicParser.RULE_constSubStmt = 7;
TibboBasicParser.RULE_declareVariableStmt = 8;
TibboBasicParser.RULE_declareSubStmt = 9;
TibboBasicParser.RULE_declareFuncStmt = 10;
TibboBasicParser.RULE_doLoopStmt = 11;
TibboBasicParser.RULE_enumerationStmt = 12;
TibboBasicParser.RULE_enumerationStmt_Constant = 13;
TibboBasicParser.RULE_exitStmt = 14;
TibboBasicParser.RULE_forNextStmt = 15;
TibboBasicParser.RULE_functionStmt = 16;
TibboBasicParser.RULE_jumpStmt = 17;
TibboBasicParser.RULE_goToStmt = 18;
TibboBasicParser.RULE_ifThenElseStmt = 19;
TibboBasicParser.RULE_ifConditionStmt = 20;
TibboBasicParser.RULE_propertyDefineStmt = 21;
TibboBasicParser.RULE_propertyDefineStmt_InStmt = 22;
TibboBasicParser.RULE_propertyGetStmt = 23;
TibboBasicParser.RULE_propertySetStmt = 24;
TibboBasicParser.RULE_eventDeclaration = 25;
TibboBasicParser.RULE_syscallDeclaration = 26;
TibboBasicParser.RULE_syscallDeclarationInner = 27;
TibboBasicParser.RULE_syscallInternalDeclarationInner = 28;
TibboBasicParser.RULE_syscallInternalParamList = 29;
TibboBasicParser.RULE_paramInternal = 30;
TibboBasicParser.RULE_selectCaseStmt = 31;
TibboBasicParser.RULE_sC_Case = 32;
TibboBasicParser.RULE_sC_Default = 33;
TibboBasicParser.RULE_sC_Cond = 34;
TibboBasicParser.RULE_subStmt = 35;
TibboBasicParser.RULE_typeStmt = 36;
TibboBasicParser.RULE_typeStmtElement = 37;
TibboBasicParser.RULE_expression = 38;
TibboBasicParser.RULE_unaryExpression = 39;
TibboBasicParser.RULE_unaryOperator = 40;
TibboBasicParser.RULE_postfixExpression = 41;
TibboBasicParser.RULE_postfix = 42;
TibboBasicParser.RULE_primaryExpression = 43;
TibboBasicParser.RULE_variableStmt = 44;
TibboBasicParser.RULE_variableListStmt = 45;
TibboBasicParser.RULE_variableListItem = 46;
TibboBasicParser.RULE_whileWendStmt = 47;
TibboBasicParser.RULE_objectDeclaration = 48;
TibboBasicParser.RULE_argList = 49;
TibboBasicParser.RULE_arg = 50;
TibboBasicParser.RULE_paramList = 51;
TibboBasicParser.RULE_param = 52;
TibboBasicParser.RULE_asTypeClause = 53;
TibboBasicParser.RULE_baseType = 54;
TibboBasicParser.RULE_complexType = 55;
TibboBasicParser.RULE_fieldLength = 56;
TibboBasicParser.RULE_lineLabel = 57;
TibboBasicParser.RULE_literal = 58;
TibboBasicParser.RULE_arrayLiteral = 59;
TibboBasicParser.RULE_type = 60;
TibboBasicParser.RULE_visibility = 61;


function StartRuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicParser.RULE_startRule;
    return this;
}

StartRuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StartRuleContext.prototype.constructor = StartRuleContext;

StartRuleContext.prototype.EOF = function() {
    return this.getToken(TibboBasicParser.EOF, 0);
};

StartRuleContext.prototype.topLevelDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TopLevelDeclarationContext);
    } else {
        return this.getTypedRuleContext(TopLevelDeclarationContext,i);
    }
};

StartRuleContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicParserListener ) {
        listener.enterStartRule(this);
	}
};

StartRuleContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicParserListener ) {
        listener.exitStartRule(this);
	}
};

StartRuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicParserVisitor ) {
        return visitor.visitStartRule(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TibboBasicParser.StartRuleContext = StartRuleContext;

TibboBasicParser.prototype.startRule = function() {

    var localctx = new StartRuleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TibboBasicParser.RULE_startRule);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 127;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TibboBasicParser.OBJECT) | (1 << TibboBasicParser.CONST) | (1 << TibboBasicParser.DECLARE) | (1 << TibboBasicParser.DIM) | (1 << TibboBasicParser.ENUM) | (1 << TibboBasicParser.EVENT))) !== 0) || ((((_la - 41)) & ~0x1f) == 0 && ((1 << (_la - 41)) & ((1 << (TibboBasicParser.FUNCTION - 41)) | (1 << (TibboBasicParser.INCLUDE - 41)) | (1 << (TibboBasicParser.INCLUDEPP - 41)) | (1 << (TibboBasicParser.PROPERTY - 41)) | (1 << (TibboBasicParser.PUBLIC - 41)) | (1 << (TibboBasicParser.SUB - 41)) | (1 << (TibboBasicParser.TYPE - 41)))) !== 0) || _la===TibboBasicParser.SYSCALL) {
            this.state = 124;
            this.topLevelDeclaration();
            this.state = 129;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 130;
        this.match(TibboBasicParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TopLevelDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicParser.RULE_topLevelDeclaration;
    return this;
}

TopLevelDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TopLevelDeclarationContext.prototype.constructor = TopLevelDeclarationContext;

TopLevelDeclarationContext.prototype.includeStmt = function() {
    return this.getTypedRuleContext(IncludeStmtContext,0);
};

TopLevelDeclarationContext.prototype.includeppStmt = function() {
    return this.getTypedRuleContext(IncludeppStmtContext,0);
};

TopLevelDeclarationContext.prototype.enumerationStmt = function() {
    return this.getTypedRuleContext(EnumerationStmtContext,0);
};

TopLevelDeclarationContext.prototype.constStmt = function() {
    return this.getTypedRuleContext(ConstStmtContext,0);
};

TopLevelDeclarationContext.prototype.declareSubStmt = function() {
    return this.getTypedRuleContext(DeclareSubStmtContext,0);
};

TopLevelDeclarationContext.prototype.declareFuncStmt = function() {
    return this.getTypedRuleContext(DeclareFuncStmtContext,0);
};

TopLevelDeclarationContext.prototype.declareVariableStmt = function() {
    return this.getTypedRuleContext(DeclareVariableStmtContext,0);
};

TopLevelDeclarationContext.prototype.variableStmt = function() {
    return this.getTypedRuleContext(VariableStmtContext,0);
};

TopLevelDeclarationContext.prototype.subStmt = function() {
    return this.getTypedRuleContext(SubStmtContext,0);
};

TopLevelDeclarationContext.prototype.functionStmt = function() {
    return this.getTypedRuleContext(FunctionStmtContext,0);
};

TopLevelDeclarationContext.prototype.objectDeclaration = function() {
    return this.getTypedRuleContext(ObjectDeclarationContext,0);
};

TopLevelDeclarationContext.prototype.propertyDefineStmt = function() {
    return this.getTypedRuleContext(PropertyDefineStmtContext,0);
};

TopLevelDeclarationContext.prototype.eventDeclaration = function() {
    return this.getTypedRuleContext(EventDeclarationContext,0);
};

TopLevelDeclarationContext.prototype.syscallDeclaration = function() {
    return this.getTypedRuleContext(SyscallDeclarationContext,0);
};

TopLevelDeclarationContext.prototype.typeStmt = function() {
    return this.getTypedRuleContext(TypeStmtContext,0);
};

TopLevelDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicParserListener ) {
        listener.enterTopLevelDeclaration(this);
	}
};

TopLevelDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicParserListener ) {
        listener.exitTopLevelDeclaration(this);
	}
};

TopLevelDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicParserVisitor ) {
        return visitor.visitTopLevelDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TibboBasicParser.TopLevelDeclarationContext = TopLevelDeclarationContext;

TibboBasicParser.prototype.topLevelDeclaration = function() {

    var localctx = new TopLevelDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TibboBasicParser.RULE_topLevelDeclaration);
    try {
        this.state = 147;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 132;
            this.includeStmt();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 133;
            this.includeppStmt();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 134;
            this.enumerationStmt();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 135;
            this.constStmt();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 136;
            this.declareSubStmt();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 137;
            this.declareFuncStmt();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 138;
            this.declareVariableStmt();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 139;
            this.variableStmt();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 140;
            this.subStmt();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 141;
            this.functionStmt();
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 142;
            this.objectDeclaration();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 143;
            this.propertyDefineStmt();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 144;
            this.eventDeclaration();
            break;
